# yolocpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
det/: Detection.cpp  Detection.h  PyClass.cpp  PyClass.h
python_scripts/: dataset_patch.py  detect.py  test.py
python_scripts/models/: common.py
